# mnemes

./: .gitignore  Cargo.toml  README.md  install.sh
.github/workflows/: ci.yml
.hermes/plans/: 2026-07-21_213500-mnemes-completion-routing-parity.md
docs/: DEVICE_OWNED_REPLICATED_MEMORY.md  DEVICE_OWNED_REPLICATION_IMPLEMENTATION_PLAN.md  DEVICE_SHARDED_MEMORY.md  PHASE4_OPERATIONS.md  PHASE5_MIGRATION.md  UNO_Q_DEPLOYMENT_PLAN.md
ops/systemd/: mnemes.service  pooled-memory.service
scripts/: benchmark-shard-routing.py  device-shard-migrate.py  install-pooled-memory-service.sh  mneme-client.py  mneme-codex-task.sh  phase5-migrate.py  pooled-codex-task.sh  pooled-memory-client.py  pooled-memory-mcp-proxy.py
src/: error.rs  lib.rs  replica.rs  server.rs  shard.rs  shards.rs  store.rs  sync.rs  sync_handler.rs  types.rs
src/replication/: canonical.rs  error.rs  mod.rs  state_machine.rs  trusted_key.rs  types.rs
tests/: admin_cli.rs  bitemporal_lineage.rs  device_shards.rs  provenance_edges.rs  replication_protocol.rs  replication_protocol_vector.py  replication_sync.rs  server.rs  test_device_shard_migration.py  test_phase4_tools.py  test_phase5_migrate.py  test_shard_benchmark.py
